--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -31,8 +31,11 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 800;
   line-height: 1.1;
 }
+
+/* was 2.225*/
 h1 {
-  font-size: 2.25rem;
+  font-size: 1.875rem;
+  
 }
 h2 {
   font-size: 1.875rem;
