--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -680,9 +680,12 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   color: #FFF;
   text-shadow: 1px 1px 3px #000;
 }
+
+
+/* -- font-size was 3.125 -- */
 .intro-header .page-heading h1 {
   margin-top: 0;
-  font-size: 3.125rem;
+  font-size: 2.5rem;
 }
 .intro-header .post-heading h1 {
   margin-top: 0;
