--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -26,7 +26,7 @@ body {
   overflow-wrap: break-word;
 }
 
-/* -- margin was 1.875rem 0 -- */
+/* -- margin was 1.870 -- */
 p {
   line-height: 1.5;
   margin: 1.0rem 0;
@@ -739,8 +739,10 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   .intro-header.big-img .post-heading {
     padding: 9.375rem 0;
   }
+  
+  /* -- was font-size:  5rem -- */
   .intro-header .page-heading h1 {
-    font-size: 5rem;
+    font-size: 3.5rem;
   }
   .intro-header .post-heading h1 {
     font-size: 3.125rem;
