--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -15,7 +15,7 @@ body {
   
   
 /* -- was 0.90 -- */
-  font-size: 0.9rem;
+  font-size: 1.15rem;
   color: {{ site.text-col | default: "#404040" }};
   position: relative;
   background-color: {{ site.page-col | default: "#FFFFFF" }};
@@ -42,8 +42,11 @@ h1 {
   font-size: 1.875rem;
   
 }
+
+
+/* -- was 1.875 -- */
 h2 {
-  font-size: 1.875rem;
+  font-size: 1.35rem;
 }
 h3 {
   font-size: 1.5rem;
@@ -51,8 +54,10 @@ h3 {
 h4 {
   font-size: 1.125rem;
 }
+
+/* -- was 1.25rem -- */
 h1, h2, h3, h4 {
-  margin-top: 1.25rem;
+  margin-top: 1.0rem;
 }
 a {
   color: {{ site.link-col | default: "#008AFF" }};
